syntax = "proto3";

package s3.management.v1;

option go_package = "github.com/NpoolPlatform/s3-management/message/npool";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// Service Name
service S3Management {
    // Method Version
    rpc Version (google.protobuf.Empty) returns (VersionResponse){
        option (google.api.http) = {
            post: "/version"
            body: "*"
        };
    }
    rpc UploadKycImg (UploadKycImgRequest) returns (UploadKycImgResponse) {
        option (google.api.http) = {
            post: "/v1/upload/kyc/img"
            body: "*"
        };
    };
    rpc GetKycImg (GetKycImgRequest) returns (GetKycImgResponse) {
        option (google.api.http) = {
            post: "/v1/get/kyc/img"
            body: "*"
        };
    };
}

// request body and response
message VersionResponse {
    string Info = 100;
}

message UploadKycImgRequest {
    string UserID = 1;
    string ImgType = 2;
    string ImgBase64 = 3;
}

message UploadKycImgResponse {
    // return ImgID
    string Info = 1;
}

message GetKycImgRequest {
    string ImgID = 2;
}

message GetKycImgResponse {
    // return ImgBase64
    string Info = 1;
}
